# fcompdata

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  python-package.yml
scripts/: PromoData.csv  build_individual_data.R
src/competitions/: __init__.py  mcomp.py
src/fcompdata/: __init__.py  fcompdata.py
src/fcompdata/data/: individual_data.json
src/mcomp/: __init__.py  mcomp.py
tests/: test_fcompdata.py
